--- a/assets/styles/components/navbar.css
+++ b/assets/styles/components/navbar.css
@@ -12,7 +12,7 @@ body {
   background: #1a3129;
 }
 .container-text {
-  font-size: 8px;
+  font-size: 20px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -29,9 +29,9 @@ body {
   border-color: #ffffff23;
   border-radius: 5px;
   border-width: 0.1px;
-  width: 90%;
-  max-height: 25px;
-  margin-top: 10px;
+  width: 90vw;
+  max-height: 100px;
+  margin-top: 15px;
 }
 
 .container-banner {
@@ -40,14 +40,14 @@ body {
   border-bottom: solid;
   border-width: 0.1px;
   border-color: #ffffff23;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 }
 
 .container-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 24px;
+  padding: 45px 45px;
   flex-wrap: wrap;
 }
 
@@ -68,7 +68,7 @@ body {
 
 .nav-list a {
   color: #ffffff;
-  font-size: 10px;
+  font-size: 24px;
   font-weight: 500;
 }
 .nav-btn {
