--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -12,7 +12,7 @@ body {
   background: #1a3129;
 }
 .container-text {
-  font-size: 8px;
+  font-size: 20px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -29,9 +29,9 @@ body {
   border-color: #ffffff23;
   border-radius: 5px;
   border-width: 0.1px;
-  width: 90%;
-  max-height: 25px;
-  margin-top: 10px;
+  width: 90vw;
+  max-height: 100px;
+  margin-top: 15px;
 }
 
 .container-banner {
@@ -40,14 +40,14 @@ body {
   border-bottom: solid;
   border-width: 0.1px;
   border-color: #ffffff23;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 }
 
 .container-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 24px;
+  padding: 45px 45px;
   flex-wrap: wrap;
 }
 
@@ -68,7 +68,7 @@ body {
 
 .nav-list a {
   color: #ffffff;
-  font-size: 10px;
+  font-size: 24px;
   font-weight: 500;
 }
 .nav-btn {
@@ -96,4 +96,127 @@ body {
 
 .nav-list a:active {
   color: #cbea7b;
+}
+
+.container-hero {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-items: center;
+  align-content: center;
+  gap: 35px;
+}
+
+.container-hero img {
+  display: flex;
+  justify-content: center;
+  align-self: flex-start;
+  flex-wrap: wrap;
+  max-width: 100%;
+  max-height: auto;
+  object-fit: cover;
+  /* width: 949px;
+  height: 832px; */
+}
+
+.content-hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  gap: 30px;
+  align-items: start;
+  padding: 0 20px;
+  max-width: 600px;
+}
+#text-hero {
+  font-weight: bold;
+  font-size: 30px;
+  border-bottom: #cbea7b solid;
+  border-width: auto;
+  padding: 5px;
+}
+
+.content-hero h1 {
+  font-size: 50px;
+  font-weight: bold;
+  color: #262626;
+}
+
+.content-hero p {
+  font-size: 19px;
+  color: #262626;
+  line-height: 1.5;
+}
+
+.btn-hero {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+  gap: 8px;
+}
+
+#btn-1 {
+  background: #cbea7b;
+  color: #262626;
+  padding: 20px 30px;
+  border-radius: 5px;
+  font-weight: bold;
+  text-align: center;
+  align-content: center;
+  font-size: 20px;
+}
+
+#btn-2 {
+  color: #262626;
+  border: solid;
+  border-color: #cbea7b;
+  border-radius: 5px;
+  border-width: 0.1px;
+  padding: 20px 30px;
+  font-weight: bold;
+  align-content: center;
+  font-size: 20px;
+}
+
+.container-clients {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap-reverse;
+  flex-direction: row-reverse;
+}
+
+.container-clients span {
+  font-size: 25px;
+  font-weight: bold;
+  color: #468671;
+}
+
+.container-clients p {
+  font-size: 25px;
+  font-weight: bold;
+  color: #333333;
+}
+
+.container-circles {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  border: #cbea7b solid;
+  border-radius: 30px;
+  margin: 10px;
+  padding: 5px;
+}
+
+.container-circles img {
+  display: flex;
+  border-radius: 50%;
+  z-index: -1;
+}
+
+#circle-2 {
+  margin-left: -20px;
 }
